# bse_econometrics

./: .gitignore  LICENSE  README.md  _quarto.yml  pyproject.toml
LaTex/: main.tex
LaTex/Latex/: packages.tex
TA1/: TA1.html  TA1.ipynb  TA1.qmd  TA1_Python.ipynb  cosmo.scss  journal.scss  partial_derivates.md  slides.html  slides.qmd  ta1.md
TA2/: TA2.Rmd  TA2.html  TA2.ipynb  TA2.qmd  TA2_solutions.Rmd  setup.md  slides_prueba.html  slides_ta2.html  slides_ta2.qmd
TA3/: TA3.do  TA3.html  TA3.ipynb  TA3.qmd  regression_output.tex
TA4/: TA4.do  TA4.html  TA4.ipynb  TA4.qmd  TA4.tex  regression_output.tex
TA5/: TA5.do  TA5.html  TA5.ipynb  TA5.qmd
TA6/: TA6.do  TA6.html  TA6.qmd
TA7/: TA7.do  TA7.html  TA7.qmd
TA8/: TA8.html  TA8.ipynb  TA8.qmd
